@@ -3,7 +3,10 @@ package com.hartwig.hmftools.lilac.evidence;
 import static com.hartwig.hmftools.lilac.LilacConfig.LL_LOGGER;
 import static com.hartwig.hmftools.lilac.seq.HlaSequence.WILD_STR;
 
+import java.util.ArrayList;
+import java.util.Collection;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 import com.google.common.collect.Lists;
@@ -28,9 +31,10 @@ public final class Candidates
         mAminoAcidSequences = aminoAcidSequences;
     }
 
-    public List<HlaAllele> unphasedCandidates(final HlaContext context, final List<Fragment> fragments, final List<HlaAllele> commonAllles)
+    public List<HlaAllele> unphasedCandidates(final HlaContext context, final List<Fragment> fragments,
+            final Collection<HlaAllele> commonAllles)
     {
-        List<Integer> aminoAcidBoundary = context.AminoAcidBoundaries;
+        Set<Integer> aminoAcidBoundary = context.AminoAcidBoundaries;
 
         LL_LOGGER.debug("gene({}) determining un-phased candidates from frags({})", context.geneName(), fragments.size());
 
@@ -48,8 +52,7 @@ public final class Candidates
         List<HlaAllele> aminoAcidCandidateAlleles = aminoAcidCandidates.stream().map(x -> x.Allele).collect(Collectors.toList());
 
         List<HlaAllele> aminoAcidSpecificAllelesCandidates = aminoAcidCandidateAlleles.stream()
-                .map(x -> x.asFourDigit())
-                .collect(Collectors.toList());
+                .map(HlaAllele::asFourDigit).toList();
 
         if(aminoAcidSpecificAllelesCandidates.isEmpty())
         {
@@ -88,7 +91,7 @@ public final class Candidates
     }
 
     private List<HlaSequenceLoci> filterSequencesByMinSupport(
-            final List<HlaSequenceLoci> candidates, final SequenceCount aminoAcidCount, final List<Integer> aminoAcidBoundaries)
+            final Collection<HlaSequenceLoci> candidates, final SequenceCount aminoAcidCount, final Set<Integer> aminoAcidBoundaries)
     {
         // eliminate sequences without min support for their amino acid at each loco, ignoring exon boundaries
         List<HlaSequenceLoci> candidateSequences = Lists.newArrayList();
@@ -149,18 +152,17 @@ public final class Candidates
         return phasedAlleles;
     }
 
-    private List<HlaSequenceLoci> filterCandidates(final List<HlaSequenceLoci> initialCandidates, final List<PhasedEvidence> evidence)
+    private static List<HlaSequenceLoci> filterCandidates(final Collection<HlaSequenceLoci> initialCandidates,
+            final List<PhasedEvidence> evidence)
     {
         List<HlaSequenceLoci> candidates = Lists.newArrayList();
         candidates.addAll(initialCandidates);
 
-        for(int i = 0; i < evidence.size(); ++i)
+        for(PhasedEvidence newEvidence : evidence)
         {
-            PhasedEvidence newEvidence = evidence.get(i);
-
             candidates = candidates.stream()
                     .filter(x -> x.consistentWithAny(
-                            newEvidence.getEvidence().keySet().stream().collect(Collectors.toList()), newEvidence.getAminoAcidLoci()))
+                            new ArrayList<>(newEvidence.getEvidence().keySet()), newEvidence.getAminoAcidLoci()))
                     .collect(Collectors.toList());
         }
 
